homepage links sizing and spacing fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,30 @@
 	box-sizing: border-box;
 } */
 
+.absolute-wrapper{
+  position: relative;
+}
+nav.navbar.navbar-expand-lg.navbar-light.bg-transparent {
+  position: relative;
+  z-index: 3;
+}
+
+.page{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  z-index: 99;
+}
+
+.heading {
+  position: flex;
+  margin-left: -50px; /* margin is -0.5 * dimension */
+  margin-right: -50px;
+  z-index: 1;
+  font-weight: bold;
+}
 h1 { font-size: 1em;
 }
 .navbar-light .navbar-brand {
@@ -60,6 +84,21 @@ h1 { font-size: 1em;
   transform: translate(-50%, -50%);
 }
 
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+  font-size: 0.7em;
+  font-weight: bolder;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: slategray; 
+  font-size: 0.7em;
+}
+
+a.nav-link {
+  padding: 5px;
+}
+
 @media screen and (min-width: 25em) {
   h1 { font-size: 1.5em;
   }
@@ -77,6 +116,7 @@ h1 { font-size: 1em;
     font-size: 1em;
     color: slategray;
   }
+
   
   
 }
@@ -90,7 +130,7 @@ h1 { font-size: 1em;
   .text-footer {
     font-size: 14px;
   }
-  
+
 }
 
 @media screen and (min-width: 62em) {
@@ -121,18 +161,37 @@ h1 { font-size: 1em;
     grid-template-rows: auto;
     grid-gap: 0px;
   }
- 
+  
   
 }
 
-.page{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  z-index: -5;
+@media screen and (min-width: 70em) {
+  h1 { font-size: 3em;
+  }
+  .gallery {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    grid-gap: 0px;
+  }
+  .navbar-light .navbar-nav .nav-link {
+    color: white;
+    font-size: 1em;
+  }
+  
+  .navbar-light .navbar-nav .nav-link:hover {
+    color: slategray; 
+    font-size: 1em;
+  }
+
+  a.nav-link {
+    padding: 10px;
+  }
+  
+  
 }
+
+
 html,
 body,
 #root {
@@ -307,18 +366,6 @@ a:hover {
   z-index: 10000000;
 }
 
-.heading {
-  position: flex;
-  height: 50px;
-  top: 50%;
-  left: 25%;
-  margin-left: -50px; /* margin is -0.5 * dimension */
-  margin-right: -50px;
-  margin-top: -25px; 
-  z-index: 1;
-  font-weight: bold;
-}
-
 
 .overlay {
   /* opacity: 1; */
@@ -348,13 +395,8 @@ a:hover {
 
 
 
-.navbar-light .navbar-nav .nav-link {
-  color: white;
-}
 
-.navbar-light .navbar-nav .nav-link:hover {
-  color: slategray; 
-}
+
 
 #active_tab {
   color: yellow;
